Select payment method at order level, not payment level.

--- a/templates/payment/scripts.html.twig
+++ b/templates/payment/scripts.html.twig
@@ -40,7 +40,7 @@
   amount: order.total,
   gatewayConfigs: gateway_configs,
   tokenElement: token_element_selector,
-  selectPaymentMethodURL: path('order_payment_select_method', { hashId: payment|hashid })
+  selectPaymentMethodURL: path('order_select_payment_method')
 } %}
 
 {% if with_saved_cards|default(false) %}
