Implement orders with potentially multiple payments.
- Avoid using Order::getLastPayment() method.
- Avoid calling StripeManager::configurePayment() systematically.
- Make a loop over payments, and authorize them if needed.

--- a/templates/payment/scripts.html.twig
+++ b/templates/payment/scripts.html.twig
@@ -3,6 +3,8 @@
 
 {% set gateway_configs = {} %}
 
+{% set payment = order.payments|filter(payment => payment.method.code == 'CARD' and payment.state == 'cart')|first %}
+
 {% if gateway == 'stripe' %}
 <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
 
