--- a/templates/order/_partials/payment_form.html.twig
+++ b/templates/order/_partials/payment_form.html.twig
@@ -5,7 +5,7 @@
 
 <div class="modal fade" id="{{ refund_modal_id }}" tabindex="-1" role="dialog" aria-labelledby="{{ refund_modal_id }}-label">
   <div class="modal-dialog" role="document">
-    {{ form_start(payment_form, { attr: { class: 'modal-content' } }) }}
+    <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
@@ -47,6 +47,6 @@
           {{ form_widget(payment_form.refund, { attr: { class: 'btn btn-danger' } }) }}
         {% endif %}
       </div>
-    {{ form_end(payment_form) }}
+    </div>
   </div>
 </div>
