--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -56,3 +56,8 @@
 {% if form.failureReasonSet is defined %}
   {{ form_row(form.failureReasonSet) }}
 {% endif %}
+
+{% if form.billingMethod is defined %}
+  <hr>
+  {{ form_row(form.billingMethod) }}
+{% endif %}
