--- a/templates/embed/delivery/summary.html.twig
+++ b/templates/embed/delivery/summary.html.twig
@@ -102,9 +102,9 @@ $("#modify-form").on('click', function() {
 
 {% include 'payment/scripts.html.twig' with {
   order: order,
-  payment: payment,
   payment_form_selector: 'form[name="checkout_payment"]',
-  token_element_selector: '#checkout_payment_stripePayment_stripeToken'
+  token_element_selector: '#checkout_payment_stripePayment_stripeToken',
+  select_payment_method_url: path('order_by_hashid16_select_payment_method', { hashid: order|hashid(16) })
 } %}
 
 {% endblock %}
