feat: add the possibility to auto-assign deliveries from a store

--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -56,3 +56,8 @@
 {% if form.failureReasonSet is defined %}
   {{ form_row(form.failureReasonSet) }}
 {% endif %}
+
+{% if form.defaultCourier is defined %}
+  <hr>
+  {{ form_row(form.defaultCourier) }}
+{% endif %}
