Allow configuring zone/distance for a store.

--- a/templates/form/store.html.twig
+++ b/templates/form/store.html.twig
@@ -19,3 +19,7 @@
   {% endif %}
 {% endblock %}
 
+{% block _store_checkExpression_row %}
+  {{ block('delivery_perimeter_expression_widget') }}
+{% endblock %}
+
