--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -29,6 +29,9 @@
     {% if form.multiDropEnabled is defined %}
       {{ form_row(form.multiDropEnabled) }}
     {% endif %}
+    {% if form.checkExpression is defined %}
+      {{ form_row(form.checkExpression) }}
+    {% endif %}
   {% endif %}
   <hr>
 {% endif %}
