--- a/templates/form/package_set.html.twig
+++ b/templates/form/package_set.html.twig
@@ -18,17 +18,16 @@
 {% endblock %}
 
 {% block _package_set_packages_entry_row %}
-  <div class="package-entry thumbnail p-2 m-2">
+  <div class="package-entry thumbnail p-4 m-2 mb-4">
     <div class="my-2">
         <span class="form-inline d-inline-block">
           {{ form_label(form.name) }}<i class="text-danger">*</i> {{ form_widget(form.name) }}
         </span>
-        <a class="ml-2 collapse-trigger">{{'form.package.enter_details'|trans}}</span>
         <a class="text-danger text-center pull-right mr-2">
           <i class="fa fa-trash delete-package-entry"></i>
         </a>
     </div>
-    <div class="mb-0 package-entry-body collapse">
+    <div class="mb-0 package-entry-body">
       <hr />
       <div class="row m-0">
         <div class="col-md-8">
