--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -125,7 +125,7 @@
       {% endif %}
     </div>
     <div class="col-md-5 delivery__form__buttons">
-      {% if not is_new and is_granted('ROLE_DISPATCHER')  %}
+      {% if is_new or is_granted('ROLE_DISPATCHER')  %}
         <button id="delivery-submit" type="submit" class="btn btn-block btn-lg btn-primary">
           <i class="fa fa-spinner fa-spin hidden" id="loader"></i>
           {% trans %}basics.save{% endtrans %}
