single place to configure crash reporting

--- a/templates/delivery/tracking.html.twig
+++ b/templates/delivery/tracking.html.twig
@@ -44,13 +44,7 @@
     <div id="cpccl_settings"
       data-latlng="{{ coopcycle_setting('latlng')|json_encode|e('html_attr') }}"></div>
 
-    {% if app.environment == "prod" %}
-      <script src="https://browser.sentry-cdn.com/5.5.0/bundle.min.js"
-        integrity="sha384-/kLYKYxlMDI1l+lhDHECQrq1Z4fnk/A32MWVF6rRnuE2WiOuAmg3wr3McNOG3Szi" crossorigin="anonymous"></script>
-      <script>
-        Sentry.init({ dsn: '{{ sentry_public_dsn }}' });
-      </script>
-    {% endif %}
+    {% include '_partials/monitoring.html.twig' %}
 
     <script src="/tracking/socket.io/socket.io.js"></script>
     <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
