--- a/templates/maintenance.html.twig
+++ b/templates/maintenance.html.twig
@@ -19,6 +19,7 @@
         {% endif %}
       </div>
     </div>
+    {% include '_partials/monitoring.html.twig' %}
     {% include "_partials/analytics.html.twig" %}
   </body>
 </html>
