--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -85,16 +85,8 @@
       {% include "footer.html.twig" %}
       {% endif %}
     {% endblock %}
-    {% if app.environment == "prod" %}
-      <script
-        src="https://browser.sentry-cdn.com/6.2.4/bundle.min.js"
-        integrity="sha384-b3mYy/x0ZxlqU5OjYvVD7RczftJVOXmpHSmrcqpL4c+kBSXWEnRL2Puv9eMjYmDq"
-        crossorigin="anonymous"
-      ></script>
-      <script>
-        Sentry.init({ dsn: '{{ sentry_public_dsn }}' });
-      </script>
-    {% endif %}
+
+    {% include '_partials/monitoring.html.twig' %}
 
     <div id="cpccl_settings"
       data-latlng="{{ coopcycle_setting('latlng')|json_encode|e('html_attr') }}"></div>
