--- a/templates/store/layout.html.twig
+++ b/templates/store/layout.html.twig
@@ -51,8 +51,8 @@
             {{ 'stores.deliveries'|trans }}
           </a>
         </li>
-        <li role="presentation">
-          <a data-testid="bookmarks" href="{{ path('admin_store_deliveries_bookmarks', { id: store.id }) }}">
+        <li role="presentation" {% if app.request.attributes.get('_route') == 'admin_store_orders_saved' %}class="active"{% endif %}>
+          <a data-testid="bookmarks" href="{{ path('admin_store_orders_saved', { id: store.id }) }}">
             {{ 'stores.deliveries.bookmarks'|trans }}
           </a>
         </li>
