--- a/templates/delivery/tracking.html.twig
+++ b/templates/delivery/tracking.html.twig
@@ -45,11 +45,8 @@
       data-latlng="{{ coopcycle_setting('latlng')|json_encode|e('html_attr') }}"></div>
 
     {% if app.environment == "prod" %}
-      <script src="https://browser.sentry-cdn.com/5.5.0/bundle.min.js"
-        integrity="sha384-/kLYKYxlMDI1l+lhDHECQrq1Z4fnk/A32MWVF6rRnuE2WiOuAmg3wr3McNOG3Szi" crossorigin="anonymous"></script>
-      <script>
-        Sentry.init({ dsn: '{{ sentry_public_dsn }}' });
-      </script>
+    <div id="sentry" data-dsn="{{ sentry_public_dsn }}"></div>
+    {{ encore_entry_script_tags('sentry') }}
     {% endif %}
 
     <script src="/tracking/socket.io/socket.io.js"></script>
