update button name

--- a/templates/_partials/recurrence_rule/list.html.twig
+++ b/templates/_partials/recurrence_rule/list.html.twig
@@ -71,7 +71,7 @@
                 </td>
 
                 <td class="text-right">
-                    <a href="{{ path(routes.view, { storeId: store.id, subscriptionId: recurrenceRule.id }) }}">{{ 'basics.edit'|trans }}</a>
+                    <a href="{{ path(routes.view, { storeId: store.id, subscriptionId: recurrenceRule.id }) }}">{{ 'basics.view'|trans }}</a>
                 </td>
             </tr>
         {% endfor %}
