--- a/templates/store/subscriptions/item.html.twig
+++ b/templates/store/subscriptions/item.html.twig
@@ -7,7 +7,7 @@
 
     <li><a href="{{ path('admin_stores') }}">{% trans %}adminDashboard.stores.title{% endtrans %}</a></li>
     <li><a href="{{ path('admin_store', { id: store.id }) }}">{{ store.name }}</a></li>
-    <li>{% trans %}subscriptions.title{% endtrans %}</li>
+    <li>{% trans %}stores.recurrence_rules{% endtrans %}</li>
     <li>#{{ subscription.id }}</li>
   {% endif %}
 
