added(e2e tests): recurrence rules list

--- a/templates/_partials/recurrence_rule/list.html.twig
+++ b/templates/_partials/recurrence_rule/list.html.twig
@@ -15,7 +15,7 @@
       {% set templateDelivery = item.templateDelivery %}
       {% set templateOrder = item.templateOrder %}
 
-      <tr data-testid="delivery__list_item">
+      <tr data-testid="recurrence_rule__list_item">
         <td>
           <ul class="list-unstyled">
             {% for task in templateTasks %}
