fixed: renamed: subscription > recurrence rule

--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -18,7 +18,7 @@
 
   {{ form_start(form, { attr: {
     'data-store': delivery.store is not empty ? delivery.store|get_iri_from_item : null,
-    'data-subscription': subscription is defined and subscription is not empty ? subscription|coopcycle_normalize('AppBundle\\Entity\\Task\\RecurrenceRule', ['task_recurrence_rule'], 'json')|json_encode : null,
+    'data-subscription': recurrenceRule is defined and recurrenceRule is not empty ? recurrenceRule|coopcycle_normalize('AppBundle\\Entity\\Task\\RecurrenceRule', ['task_recurrence_rule'], 'json')|json_encode : null,
     'data-user-admin': is_granted('ROLE_ADMIN')
   } }) }}
 
