set title per page

--- a/templates/admin/dashboard_iframe.html.twig
+++ b/templates/admin/dashboard_iframe.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('adminDashboard.title'|trans) }}
+{% endblock %}
+
 {% block banner %}{% endblock %}
 
 {% block menu %}
