--- a/templates/admin/orders.html.twig
+++ b/templates/admin/orders.html.twig
@@ -1,5 +1,9 @@
 {% extends "admin.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('adminDashboard.orders.title'|trans) }}
+{% endblock %}
+
 {% if is_granted('ROLE_ADMIN') %}
 {% form_theme order_export_form 'form/order_export.html.twig' %}
 {% endif %}
