--- a/templates/admin/restaurants.html.twig
+++ b/templates/admin/restaurants.html.twig
@@ -1,5 +1,9 @@
 {% extends "admin.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('adminDashboard.shops.title'|trans) }}
+{% endblock %}
+
 {% form_theme pledge_form 'bootstrap_3_layout.html.twig' %}
 
 {% block breadcrumb %}
