--- a/templates/admin/stores.html.twig
+++ b/templates/admin/stores.html.twig
@@ -1,5 +1,9 @@
 {% extends "deliveries.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('adminDashboard.stores.title'|trans) }}
+{% endblock %}
+
 {% block breadcrumb %}
 {{ parent() }}
 <li>{% trans %}adminDashboard.stores.title{% endtrans %}</li>
