--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -1,5 +1,9 @@
 {% extends "admin.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('adminDashboard.users.title'|trans) }}
+{% endblock %}
+
 {% if users_export_form is defined %}
   {% form_theme users_export_form 'bootstrap_3_layout.html.twig' %}
 {% endif %}
