--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
   <head>
+    {% block prepare_title %}
+    {% endblock %}
     {{ sonata_seo_title() }}
     {{ sonata_seo_link_canonical() }}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
