--- a/templates/_partials/monitoring.html.twig
+++ b/templates/_partials/monitoring.html.twig
@@ -4,46 +4,12 @@
 {% endif %}
 
 {% if app.environment == "prod" %}
-  <script
-    type="text/javascript"
-    src="https://www.datadoghq-browser-agent.com/us1/v5/datadog-logs.js"></script>
-  <script>
-    window.DD_LOGS &&
-    window.DD_LOGS.init({
-      clientToken: '{{ datadog_client_token }}',
-      site: 'datadoghq.com',
-      service: '{{ instance_name }}',
-      forwardErrorsToLogs: true,
-      // Only tracked sessions send logs.
-      sessionSampleRate: 100,
-      telemetrySampleRate: 0,
-    })
-  </script>
-
-  <script
-    src="https://www.datadoghq-browser-agent.com/us1/v5/datadog-rum.js"
-    type="text/javascript">
-  </script>
-  <script>
-    window.DD_RUM && window.DD_RUM.init({
-      clientToken: '{{ datadog_client_token }}',
-      applicationId: '{{ datadog_application_id }}',
-      site: 'datadoghq.com',
-      service: '{{ instance_name }}',
-      // Specify a version number to identify the deployed version of your application in Datadog
-      // version: '1.0.0',
-      // 'Browser RUM' session sample rate
-      sessionSampleRate: 10,
-      // 'Browser RUM & Session Replay' sample rate (% from sessions tracked by RUM/sessionSampleRate)
-      sessionReplaySampleRate: 20,
-      telemetrySampleRate: 0,
-      trackUserInteractions: true,
-      trackResources: true,
-      trackLongTasks: true,
-      defaultPrivacyLevel: 'mask-user-input',
-    })
-  </script>
+  <div id="datadog"
+       data-client-token="{{ datadog_client_token }}"
+       data-application-id="{{ datadog_application_id }}"
+       data-service="{{ instance_name }}"
+  ></div>
 {% endif %}
 
 {# inject on all environments (on dev: logs to console) #}
-{{ encore_entry_script_tags('monitoring') }}
+{{ encore_entry_script_tags('datadog') }}
