Allow configuring Urbantz Hub Id.

--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -69,3 +69,8 @@
   <hr>
   {{ form_row(form.defaultCourier) }}
 {% endif %}
+
+{% if form.urbantzHubId is defined %}
+  <hr>
+  {{ form_row(form.urbantzHubId) }}
+{% endif %}
