--- a/assets/css/utils.scss
+++ b/assets/css/utils.scss
@@ -73,7 +73,11 @@
   font-weight: 600 !important;
 }
 
-.cursor--grabbing {
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.cursor-grabbing {
   cursor: grabbing;
 }
 
