fix: always show the package count on label

--- a/templates/task/label.pdf.twig
+++ b/templates/task/label.pdf.twig
@@ -93,7 +93,7 @@
           {% if currentPackage is not null %}
             <li style="font-size: 1.4em">{{ currentPackage }} / {{ totalPackages }}</li>
           {% else %}
-            <li>-</li>
+            <li style="font-size: 1.4em">{{ totalPackages }}</li>
           {% endif %}
         </ul>
       </div>
