--- a/templates/emails/order/accepted.mjml.twig
+++ b/templates/emails/order/accepted.mjml.twig
@@ -19,9 +19,13 @@
     '%phone_number%': phone_number ? phone_number|phone_number_format('NATIONAL') : 'N/A'
   }, 'emails')|raw }}
   </mj-text>
-  {% if not order.isMultiVendor() and order.vendor.loopeatEnabled and order.reusablePackagingEnabled %}
+  {% if order.isLoopeat() %}
   <mj-text align="left" line-height="20px">
-  {{ ('order.loopeat.accepted')|trans({}, 'emails')|raw }}
+  {% if loopeat_context.processingFee > 0 and loopeat_context.processingFeeBehavior == 'on_returns' %}
+  {{ ('order.loopeat.accepted.with_fee')|trans({ '%name%': loopeat_context.name, '%amount%': loopeat_context.processingFee|price_format }, 'emails')|raw }}
+  {% else %}
+  {{ ('order.loopeat.accepted')|trans({ '%name%': loopeat_context.name }, 'emails')|raw }}
+  {% endif %}
   </mj-text>
   {% endif %}
   <mj-button font-family="Raleway, Arial, sans-serif" background-color="#10ac84" color="white" href="{{ url('order_confirm', { hashid: order|hashid(16) }) }}">
