--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
   <head>
+    {# SEO attributes are configured via SeoListener service #}
     {% block prepare_title %}
+      {# Use this block to customise base page title set by SeoListener service #}
     {% endblock %}
     {{ sonata_seo_title() }}
     {{ sonata_seo_link_canonical() }}
