added: foodtech dashboard page title

--- a/templates/admin/orders.html.twig
+++ b/templates/admin/orders.html.twig
@@ -35,7 +35,7 @@
     </button>
     {% endif %}
     <a class="btn btn-default" href="{{ path('admin_foodtech_dashboard', { date: 'now'|date('Y-m-d') }) }}">
-      <i class="fa fa-th-large"></i> Dashboard
+      <i class="fa fa-th-large"></i> {{ 'foodtech.dashboard.title'|trans }}
     </a>
   </div>
 </div>
