--- a/templates/admin/foodtech_dashboard.html.twig
+++ b/templates/admin/foodtech_dashboard.html.twig
@@ -1,5 +1,9 @@
 {% extends "admin.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('foodtech.dashboard.title'|trans) }}
+{% endblock %}
+
 {% block body %}
 <div id="foodtech-dashboard"
      data-current-route="{{ app.request.attributes.get('_route') }}"
