feat: handle maj select for unassigned tasks

--- a/assets/css/utils.scss
+++ b/assets/css/utils.scss
@@ -86,3 +86,9 @@ li > a.text-danger // very specific selector for bootstrap dropdown
 {
   color: $red;
 }
+
+.no-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
