--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -40,15 +40,16 @@
   {{ form_row(form.transporter) }}
   <hr>
 {% endif %}
-{% if form.timeSlot is defined or form.timeSlots is defined or form.packageSet is defined %}
+{% if form.vars.data.id is not null and (form.timeSlot is defined or form.timeSlots is defined) %}
   <div {{ react_component('Store/TimeSlot', {
     store: form.vars.data|serialize,
   }) }}>
   </div>
   <hr>
-  {% if form.packageSet is defined %}
-    {{ form_row(form.packageSet) }}
-  {% endif %}
+{% endif %}
+
+{% if form.packageSet is defined %}
+  {{ form_row(form.packageSet) }}
   <hr>
 {% endif %}
 
