--- a/templates/store/layout.html.twig
+++ b/templates/store/layout.html.twig
@@ -1,7 +1,7 @@
 {% extends layout %}
 
 {% block prepare_title %}
-  {{ add_title_prefix(store.name) }}
+  {{ add_title_prefix(store.name ?? ('adminDashboard.stores.createNew'|trans)) }}
 {% endblock %}
 
 {% block content %}
