added: show (business) client name in the list of (delivery) orders

--- a/templates/_partials/delivery/list.html.twig
+++ b/templates/_partials/delivery/list.html.twig
@@ -50,6 +50,9 @@
           <li>
             <small>
               <span class="mr-1">{% include "_partials/task/type_icon.html.twig" with { task: task } %}</span>
+              {% if task.address.name is not empty %}
+                <span><b>{{ task.address.name }}, </b></span>
+              {% endif %}
               <span>
                 {% if task.isCancelled() %}<del>{% endif %}
                   {{ task.address.streetAddress }}
