--- a/templates/store/deliveries.html.twig
+++ b/templates/store/deliveries.html.twig
@@ -2,6 +2,10 @@
 
 {% form_theme delivery_import_form 'bootstrap_3_horizontal_layout.html.twig' %}
 
+{% block prepare_title %}
+  {{ add_title_prefix(store.name) }}
+{% endblock %}
+
 {% block breadcrumb %}
 <li><a href="{{ path(stores_route) }}">{% trans %}adminDashboard.stores.title{% endtrans %}</a></li>
 <li><a data-testid="store" href="{{ path(store_route, { id: store.id }) }}">{{ store.name }}</a></li>
