--- a/templates/admin/deliveries.html.twig
+++ b/templates/admin/deliveries.html.twig
@@ -115,7 +115,7 @@
       'pending': 'clock-o',
       'started': 'play',
       'completed': 'check',
-      'failed': 'exclamation-circle'
+      'failed': 'exclamation-triangle'
     } %}
     <div class="text-right my-2">
       <div id="import-datepicker" data-default-date="{{ import_date|date('Y-m-d') }}"></div>
@@ -142,9 +142,15 @@
             <td>{{ import_queue.filename }}</td>
             <td>{{ import_queue.createdAt|time_diff }}</td>
             <td class="text-right">
-              <a href="#" class="mr-3 {% if import_queue.status != 'failed' %}d-none{% endif %}" data-delivery-import-view>
-                <i class="fa fa-eye"></i>
-              </a>
+              {% if import_queue.status == 'failed' %}
+                <a href="#" class="mr-3 text-danger text-underline" data-delivery-import-view>
+                  {{ 'deliveries.imports.see_errored_file'|trans }}
+                </a>
+              {% else %}
+                <a href="#" class="mr-3 text-underline" data-delivery-import-view>
+                  {{ 'deliveries.imports.see_file'|trans }}
+                </a>
+              {% endif %}
               <a href="#" data-delivery-import-redownload>
                 <i class="fa fa-download"></i>
               </a>
