fix: hide `Settings` page from store dashboard
Fixes: https://github.com/coopcycle/coopcycle-web/issues/4771

--- a/templates/store/layout.html.twig
+++ b/templates/store/layout.html.twig
@@ -33,11 +33,13 @@
             {{ 'restaurant.form.section.general'|trans }}
           </a>
         </li>
+        {% if is_granted('ROLE_ADMIN') %}
         <li role="presentation">
           <a href="{% if store.id is not empty %}{{ path(store_route, { id: store.id }) }}{% endif %}#settings" {% if is_main_screen %}role="tab" data-toggle="tab" aria-controls="settings"{% endif %}>
             {{ 'store.form.section.settings'|trans }}
           </a>
         </li>
+        {% endif %}
         {% if store.id is not empty %}
         <li role="presentation" {% if app.request.attributes.get('_route') == store_addresses_route %}class="active"{% endif %}>
           <a href="{{ path(store_addresses_route, { id: store.id }) }}">
