--- a/templates/admin/forms.html.twig
+++ b/templates/admin/forms.html.twig
@@ -1,5 +1,9 @@
 {% extends "deliveries.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('adminDashboard.embed.title'|trans) }}
+{% endblock %}
+
 {% block breadcrumb %}
 <li>{% trans %}adminDashboard.embed.title{% endtrans %}</li>
 {% endblock %}
