--- a/templates/admin/package_sets.html.twig
+++ b/templates/admin/package_sets.html.twig
@@ -1,5 +1,9 @@
 {% extends "deliveries.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('adminDashboard.package_sets.title'|trans) }}
+{% endblock %}
+
 {% block breadcrumb %}
   {{ parent() }}
   <li>{% trans %}adminDashboard.package_sets.title{% endtrans %}</li>
