--- a/templates/admin/warehouses.html.twig
+++ b/templates/admin/warehouses.html.twig
@@ -1,5 +1,9 @@
 {% extends "deliveries.html.twig" %}
 
+{% block prepare_title %}
+  {{ add_title_prefix('warehouses.breadcrumb'|trans) }}
+{% endblock %}
+
 {% block breadcrumb %}
 <li><a href="{{ path('admin_warehouses') }}">{{ 'warehouses.breadcrumb'|trans }}</a></li>
 {% endblock %}
