deprecated and removed 'create orders' setting on Stores

--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -91,7 +91,7 @@
 
   <div class="d-md-flex d-lg-flex d-xl-flex flex-row mb-4">
     <div class="col-md-7">
-      {% if delivery.id is empty and delivery.store is not empty and delivery.store.createOrders %}
+      {% if delivery.id is empty and delivery.store is not empty %}
         <div id="delivery-price" class="mb-4 mb-md-0">
 
           <div class="delivery-price">
