--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -1,4 +1,4 @@
-{% if form.pricingRuleSet is defined or form.prefillPickupAddress is defined or form.createOrders is defined %}
+{% if form.pricingRuleSet is defined or form.prefillPickupAddress is defined %}
   {% if form.pricingRuleSet is defined and form.pricingRuleSet.vars.choices|length == 0 %}
     <div class="alert alert-warning">{% trans with {'%editPricingRule%':admin_deliveries_pricing} %}restaurant.form.noPricingRule{% endtrans %}</div>
     <div class="hidden">
@@ -6,19 +6,16 @@
       {% if form.prefillPickupAddress is defined %}
         {{ form_row(form.prefillPickupAddress) }}
       {% endif %}
-      {% if form.createOrders is defined %}
-        {{ form_row(form.createOrders) }}
-      {% endif %}
     </div>
   {% else %}
     {% if form.pricingRuleSet is defined %}
       {{ form_row(form.pricingRuleSet) }}
+      {% if form.pricingRuleSet.vars.data is null %}
+        <div class="alert alert-warning">{% trans %}form.store_type.pricing_rule_set.warning{% endtrans %}</div>
+      {% endif %}
     {% endif %}
     {% if form.prefillPickupAddress is defined %}
       {{ form_row(form.prefillPickupAddress) }}
-    {% endif %}
-    {% if form.createOrders is defined %}
-      {{ form_row(form.createOrders) }}
     {% endif %}
     {% if form.weightRequired is defined %}
       {{ form_row(form.weightRequired) }}
